# python-for-lunch

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  renovate.json  sitemap.xml  zensical.toml
.github/ISSUE_TEMPLATE/: talk-suggestion.md
.github/workflows/: ci.yml  gh-pages.yml
PFL_00_introduction/: README.md
PFL_02_Jupyter-notebooks/: README.md
PFL_03_Jupyter_examples/Leo/: libplot.py  libtimeseries.py
PFL_13_Julia/: README.md
PFL_19_Performance01_timing/: DecayLine.py  PFL_timing.ipynb
PFL_20_Performance02_dask/: PFL_dynamic_data_access.ipynb
PFL_21_Performance02_cbindings/: knn_ctypes.c
archived/: README.md
archived/PFL_01_virtual-environments/: conda_and_environments.md
archived/PFL_02_Jupyter-notebooks/: Jupyter_on_Cartesius.md  Jupyter_on_Gemini.md
archived/PFL_03_Jupyter_examples/: README.md
archived/PFL_05_06_object_oriented_programming/Intro_classes_for_SA/: Profile.py  balloons.py
archived/PFL_05_06_object_oriented_programming/Intro_classes_for_SA/model/: module.py  module1.py  module2.py  module3.py
archived/PFL_10_defensive_programming/: Defensive_programming.ipynb
archived/PFL_20_Performance02_dask/: PFL_dynamic_data_access_script.py
archived/PFL_21_Performance02_cbindings/: PFL_cbindings.ipynb  knn_ctypes.h
assets/poster/: python for lunch poster.docx
binder/: environment.yml
contributing/: index.html
docs/: contributing.md  extra-resources.md  index.md  resources.md  talks.md
docs/talks/: index.md  python-tidbits.ipynb
docs/talks/assets/: 20250904 - technical-difficulties-summary.md
docs/talks/assets/06032025 - CCDS/project_icesheetmelt/: .gitignore
docs/talks/assets/20250220 - Git and GitHub/: index.html
docs/talks/assets/20260122 - Xarray-cloud/: TODO
docs/talks/assets/20260305 - Pixi/: notes.md
docs/talks/assets/20260416 - CDO/: cdo-notebook.ipynb
resources/: index.html
talks/: index.html
talks/assets/06032025 - CCDS/project_icesheetmelt/: index.html
talks/assets/20250306 - CCDS/project_icesheetmelt/: environment.yml  index.html  pyproject.toml
talks/assets/20250417 - Conda/: index.html
talks/assets/20250612 - Pangeo Roadmap/: index.html
talks/assets/20250904 - technical-difficulties-summary/: index.html
talks/assets/20260305 - Pixi/notes/: index.html
talks/python-tidbits/: index.html
(+44 files in other folders)
